results/SVCOMP/specgen/log-boolean2-2024_02_24_15_47_43.txt
import java.util.Random;

public class boolean2 {
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }

    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:4: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }

    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:4: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }

    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:5: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }

    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:5: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }

    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:5: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }

    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:5: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }

    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:5: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }

    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:5: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }

    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:5: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }

    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:5: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;  
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }

    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }
}

/home/max/Documents/JMLGPT/tmp/boolean2.java:5: error: cannot find symbol
    //@ ensures \result == !b;  
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true;
 
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }

    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }
}


